--- a/style.css
+++ b/style.css
@@ -1,20 +1,34 @@
 body {
     font-family: "Times New Roman", Serif;
     font-size: 34px;
-    color: white;
-    background-color: rgb(238, 89, 166)
+    background-color: #ffffff;
+    margin: 10px; 
+}
+
+.block{
+    width: 400px;
+    background-color: #eee;
+    margin: 0 auto;
+    padding: 18px;
+}
+
+.title,
+.listy{
+    background-color: #979edb;
+    padding: 8px;
 }
 
 h1 {
     text-align: center;
     font-weight: 800;
     font-size: 44px;
-    color: rgb(163, 195, 163);
+    color: rgb(54, 60, 54);
 }
 
 h2,
 h3 {
     color: black;
+    font-size: 40px;
 }
 
 #sticks {
@@ -25,8 +39,51 @@ h3 {
     color: rgb(64, 26, 64)
 }
 
+/* Pizza block */
+
+.recipe-block{
+    width: 800px;
+    background-color: #eee;
+    margin: 0 auto;
+    padding: 18px;
+}
+
+.pizza-title{
+    background-color: rgb(22, 2, 2);
+    width: 450px;
+    margin: 0 auto;
+}
+
+.pizza-text{
+    color: rgb(150,122, 2);
+}
+
 #pizza {
     color: rgb(150, 122, 2);
+}
+
+/* Pizza end */
+
+/* Mozzarella-sticks block */
+
+.sticks-title{
+    background-color: rgb(22, 2, 2);
+    width: 450px;
+    margin: 0 auto;
+}
+
+.sticks-font{
+    color: rgb(144, 222, 198)
+}
+
+/* Burger block */
+
+.burger-title{
+    color: rgb(144, 67, 144)
+}
+
+.burger-font{
+    color: rgb(144, 67, 144)
 }
 
 img {
