add background color and margin to burger title

--- a/style.css
+++ b/style.css
@@ -79,6 +79,8 @@ h3 {
 /* Burger block */
 
 .burger-title{
+    background-color: rgb(22, 2, 2);
+    width: 450px;
     color: rgb(144, 67, 144)
 }
 
